# annotation-automation

./: .env.example  .gitignore  CITATION.cff  CLA.md  CONTRIBUTING.md  README.md  _wsgi.py  conftest.py  import_images.py  model.py  pyproject.toml  requirements.txt
backend/: __init__.py  converters.py  device.py  model_gdino.py  model_grounded_sam2.py  model_sam3.py  model_yolo.py  model_yolo_world.py  open_vocab.py  routing.py
docker/: Dockerfile.cpu  Dockerfile.cuda
